welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: value or is not a member of Boolean
	if (a==10 or b==10) {
                  ^makes10:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	else if (a+b=10) {
                  ^